--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "delete-lines",
   "main": "./lib/delete-lines",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Delete all lines matching a pattern",
-  "keywords": [
-  ],
+  "keywords": [],
   "activationCommands": {
     "atom-workspace": "delete-lines:toggle"
   },
@@ -13,6 +12,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
