--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "bower": "1.x"
+  },
+  "scripts": {
+    "install": "bower install"
+  }
 }
