--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "bower": "1.x"
   },
   "scripts": {
